# mst-bench

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md  download_graphs.py  eval_results.py  final_bench.csv  final_bench_2.csv  graph_generator.py  mst_bench.py  notes.norg  plot_results.py  random_bench_1.csv  random_bench_3.csv  random_bench_4.csv  random_info_1.csv
bench_results/: random_bench_2.csv
graphs/: README.md
graphs/mouse_gene/: mouse_gene.txt
graphs/random/: random_1000_0.2.txt  random_1000_0.txt  random_100_0.2.txt  random_100_0.4.txt  random_100_0.6.txt  random_100_0.8.txt  random_100_0.txt  random_100_1.txt  random_1050_0.2.txt  random_1050_0.txt  random_1100_0.2.txt  random_1100_0.txt  random_1150_0.2.txt  random_1150_0.txt  random_1200_0.2.txt  random_1200_0.txt  random_150_0.2.txt  random_150_0.4.txt  random_150_0.6.txt  random_150_0.8.txt  random_150_0.txt  random_150_1.txt  random_200_0.2.txt  random_200_0.4.txt  random_200_0.6.txt  random_200_0.8.txt  random_200_0.txt  random_200_1.txt  random_250_0.2.txt  random_250_0.4.txt  random_250_0.6.txt  random_250_0.8.txt  random_250_0.txt  random_250_1.txt  random_300_0.2.txt  random_300_0.4.txt  random_300_0.6.txt  random_300_0.8.txt  random_300_0.txt  random_300_1.txt  (+63 more)
graphs/xavierwoo/: README.md  create_json.py  graphs.json
include/: algorithms.h  graph.h  lca.h  mst_verify.h  tree_path_maxima.h  utils.h
mst-bench/: main.cpp
presentation/graphs/: boruvka_step_1.dot  boruvka_step_2.dot  boruvka_step_3.dot  boruvka_step_4.dot  boruvka_tree_1.dot  boruvka_tree_1b.dot  boruvka_tree_2.dot  boruvka_tree_3.dot  boruvka_tree_4.dot  boruvka_tree_5.dot  boruvka_tree_5b.dot  generate.py
src/: boruvka.cpp  graph.cpp  kruskal.cpp  lca.cpp  main.cpp  prim.cpp  randomKKT.cpp  tree_path_maxima.cpp
tests/: tests.cpp
